# SPDX-License-Identifier: Apache-2.0
[package]
name = "origin-gmail"
description = "First-class Gmail tool over Google OAuth2 (auth-code + refresh) with token-frugal metadata reads"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
origin-keyvault = { path = "../origin-keyvault" }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { workspace = true }
base64 = "0.22"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
