[package]
name = "origin-hooks"
description = "Pre-spawned shell pool and typed lifecycle event dispatch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
tokio = { version = "1", features = ["process", "io-util", "sync", "rt-multi-thread", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
origin-sandbox = { path = "../origin-sandbox" }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["test-util", "macros", "rt-multi-thread"] }
criterion = "0.5"

[[bench]]
name = "shellpool"
harness = false
