# SPDX-License-Identifier: Apache-2.0
[package]
name = "origin-i18n"
description = "Lightweight std-only UI string catalog with locale fallback and placeholder substitution"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true
