[package]
name = "origin-ipc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
origin-core = { path = "../origin-core" }
rkyv = { version = "0.7", features = ["validation", "bytecheck"] }
bytes = "1"
thiserror = "1"

[dev-dependencies]
proptest = { version = "=1.4.0", default-features = false, features = ["std"] }
ulid = { version = "1" }
