[package]
name = "origin-ipc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
origin-core = { path = "../origin-core" }
rkyv = { version = "0.7", features = ["validation", "bytecheck"] }
bytes = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync"] }
interprocess = { version = "2", features = ["tokio"] }
quinn.workspace          = true
rustls.workspace         = true
rustls-pemfile.workspace = true
rcgen.workspace          = true
x509-parser.workspace    = true
sha2.workspace           = true
hex.workspace            = true

[dev-dependencies]
proptest = { version = "=1.4.0", default-features = false, features = ["std"] }
ulid = { version = "1" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util", "time"] }
tempfile = "3"
