[package]
name = "origin-ipc"
description = "Framed local-socket and QUIC/TLS IPC transports for origin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
origin-core = { path = "../origin-core" }
origin-replay = { path = "../origin-replay", optional = true }
rkyv = { version = "0.7", features = ["validation", "bytecheck"] }
bytes = "1"
parking_lot = "0.12"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync"] }
interprocess = { version = "2", features = ["tokio"] }
quinn.workspace          = true
rustls.workspace         = true
rustls-pemfile.workspace = true
rcgen.workspace          = true
x509-parser.workspace    = true
sha2.workspace           = true
hex.workspace            = true

[features]
recorder = ["dep:origin-replay"]

[dev-dependencies]
proptest = { version = "=1.11.0", default-features = false, features = ["std"] }
ulid = { version = "1" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util", "time"] }
tempfile = "3"
