# SPDX-License-Identifier: Apache-2.0
[package]
name = "origin-lspfleet"
description = "Registry and auto-install decisioning for 40+ language servers, plus diagnostic aggregation."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true
