[package]
name = "origin-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
tokio = { version = "1", features = ["process", "io-util", "sync", "rt-multi-thread", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "1"
reqwest = { workspace = true }
eventsource-stream = { workspace = true }
futures-util = "0.3"
origin-tools = { path = "../origin-tools" }
origin-cas = { path = "../origin-cas" }
origin-keyvault = { path = "../origin-keyvault" }
jsonschema = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["test-util", "macros", "rt-multi-thread"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
