[package]
name = "origin-mem"
description = "Conversation memory with ONNX MiniLM embeddings, HNSW search, and temporal-decay re-ranking"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# `download-binaries` (default) so `cargo test` is hermetic — ort-sys fetches a
# vendored, statically-linked ORT binary at build time (no PATH dance, no manual
# install). rc.12 (ONNX Runtime 1.24.2) is the first ort with prebuilt static
# binaries for BOTH aarch64-unknown-linux-gnu AND aarch64-pc-windows-msvc, so the
# release builds the full trio on all 6 targets without source-compiling ORT.
# rc.11+ requires Rust >= 1.88 / edition 2024, which is why the workspace MSRV
# moved to 1.96 (see rust-toolchain.toml). Default features keep ndarray +
# download-binaries + copy-dylibs + std + tls-native + api-24.
ort         = { version = "2.0.0-rc.12", features = ["ndarray"] }
ndarray     = "0.15"
tokenizers  = { version = "0.20", default-features = false, features = ["onig"] }
hnsw_rs     = "0.3"
rand        = "0.8"
rand_chacha = "0.3"
rusqlite    = { version = "0.31", features = ["bundled", "blob"] }
ulid        = { version = "1", features = ["serde"] }
blake3      = "1"
thiserror   = "1"
sha2        = "0.10"
ureq        = { version = "2", default-features = false, features = ["tls"] }
bitvec      = "1"
parking_lot = "0.12"
regex       = "1"
tracing     = "0.1"
origin-cas   = { path = "../origin-cas" }
origin-store = { path = "../origin-store" }

[dev-dependencies]
proptest    = "1"
tempfile    = "3"
